--- a/sass/elements/_faq.scss
+++ b/sass/elements/_faq.scss
@@ -3,15 +3,17 @@
 /* Style the button that is used to open and close the collapsible content */
 
 .faq-question {
-    background-color: #eee;
-    color: #444;
+    background-color: #f3f3f3;
+    color: #000;
     cursor: pointer;
-    padding: 18px;
+    padding: 0.5rem 1rem;
+    margin-top: 0.5rem;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    font-size: 1em;
+    font-weight: bold;
 }
 
 
@@ -26,11 +28,10 @@
 /* Style the collapsible content. Note: hidden by default */
 
 .faq-answer {
-    padding: 0 18px;
-    //display: none;
+    padding: 0 1rem;
     overflow: hidden;
-    background-color: #f1f1f1;
-    color: #444;
+    background-color: #ffffff;
+    color: #000000;
     max-height: 0;
     transition: max-height 0.2s ease-out;
 }
@@ -38,7 +39,7 @@
 .faq-question:after {
     content: '\02795';
     /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
+    font-size: 1em;
     color: white;
     float: right;
     margin-left: 5px;
