some more questions (and colours)

--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -45,7 +45,7 @@
         
         {{ range .FAQs.FAQs}}
           <button type="button" class="faq-question">{{.Question}}</button>
-          <div class="faq-answer">
+          <div class="faq-answer bg-off-white">
             <br>
             <p>{{.Answer}}</p>
             {{ if .SeeMore }}
