Link to meetings on signup

--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -66,7 +66,7 @@
         <br>
         <h1 class="text-center">Come see us!</h1>
         <br>
-        <p class="text-center">We have a calendar of <a href="https://goo.gl/5APK7Q">all our meetings</a>, to which new members are always welcome, and you can drop by the station almost any time and there'll be someone to talk to.</p>
+        <p class="text-center">We have a calendar of <a href="/meetings.ics">all our meetings</a>, to which new members are always welcome, and you can drop by the station almost any time and there'll be someone to talk to.</p>
         <br>
         <p class="text-center">All of our team meetings are held in Vanbrugh Arms (V&nbsp;Bar), which is right next to the radio station</p>
         <br>
