Add customisable config for Youtube playlists.

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -45,8 +45,7 @@
 {{define "footer-scripts"}}
 <!-- Youtube slider script -->
 <script>
-var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
-var youtubeSessionsPlaylistID = "{{.PageContext.Youtube.SessionsPlaylistID}}";
+var youtubeAPIKey = "{{.PageContext.Youtube.APIKey}}";
 var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
 var youtubeLink = "{{.PageContext.Youtube.ChannelURL}}";
 var isIndex = false;
