--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -51,7 +51,7 @@
   </div>
   {{end}}
   {{if .PageContext.CIN}}
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-cin">
+  <div id="index-cin" class="container-fluid container-padded pb-0 bg-cin">
     <h2 class="cin-text">URY Candidate Interview Night</h2>
     <div id="cin-videos" class="row scroll-horiz pb-3 custom-scrollbar-cin thumbnail-slider">
     </div>
@@ -87,9 +87,12 @@
     </div>
   </div>
   {{end}}
-  <div id="index-videos" class="container-fluid container-padded pb-0 bg-sessions">
-    <h2>URY Sessions</h2>
-    <div id="sessions-videos" class="row scroll-horiz pb-3 custom-scrollbar-music thumbnail-slider">
+  {{end}}
+  {{ if .PageContext.Youtube.HomepagePlaylistID }}
+  <div id="index-videos" class="container-fluid container-padded pb-0" style="background:{{.PageContext.Youtube.HomepageBGColor}};color:{{.PageContext.Youtube.HomepageColor}};">
+    <h2 class="d-inline">{{.PageContext.Youtube.HomepageTitle}}</h2>
+    <h3 class="d-inline ml-1">{{.PageContext.Youtube.HomepageDescription}}</h3>
+    <div id="homepage-videos" class="row scroll-horiz pb-3 custom-scrollbar-music thumbnail-slider">
     </div>
   </div>
   {{end}}
@@ -98,9 +101,10 @@
 {{define "footer-scripts"}}
 <!-- Youtube slider script -->
 <script>
-var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
-var youtubeSessionsPlaylistID = "{{.PageContext.Youtube.SessionsPlaylistID}}";
+var youtubeAPIKey = "{{.PageContext.Youtube.APIKey}}";
+var youtubeHomepagePlaylistID = "{{.PageContext.Youtube.HomepagePlaylistID}}";
 var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
+var youtubeLink = "{{.PageContext.Youtube.ChannelURL}}";
 var isIndex = true;
 var isCIN = {{if .PageContext.CIN}}true{{else}}false{{end}};
 var isOD = false;
