--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -53,7 +53,7 @@
   </div>
 </div>
 {{if .PageData.LatestPodcasts}}
-<div id="index-podcasts" class="container-fluid container-padded pb-0 bg-podcasts">
+<div class="container-fluid container-padded pb-0 bg-podcasts">
   <h2>Latest Podcasts</h2>
   <div class="row custom-scrollbar scroll-horiz thumbnail-slider">
     {{range .PageData.LatestPodcasts}}
@@ -77,23 +77,39 @@
   </div>
 </div>
 {{end}}
-<div id="index-videos" class="container-fluid container-padded bg-sessions">
+<!-- OD2 for current events (other than the regular sessions etc -->
+{{ if .PageContext.Youtube.OD2PlaylistID }}
+<div class="container-fluid container-padded" style="background:{{.PageContext.Youtube.OD2BGColor}};color:{{.PageContext.Youtube.OD2Color}};">
   <div class="row">
     <div class="col-12 col-md-8">
-      <a name="YouTube"></a><h2>URY Sessions</h2>
+      <h2 class="d-inline">{{.PageContext.Youtube.OD2Title}}</h2>
+      <h3 class="d-inline ml-1">{{.PageContext.Youtube.OD2Description}}</h3>
     </div>
   </div>
-  <div id="sessions-videos" class="row pb-3 thumbnail-grid">
+  <div id="od2-videos" class="row pb-3 thumbnail-grid">
   </div>
 </div>
+{{end}}
+{{ if .PageContext.Youtube.OD1PlaylistID }}
+<div class="container-fluid container-padded" style="background:{{.PageContext.Youtube.OD1BGColor}};color:{{.PageContext.Youtube.OD2Color}};">
+  <div class="row">
+    <div class="col-12 col-md-8">
+      <h2 class="d-inline">{{.PageContext.Youtube.OD1Title}}</h2>
+      <h3 class="d-inline ml-1">{{.PageContext.Youtube.OD1Description}}</h3>
+    </div>
+  </div>
+  <div id="od1-videos" class="row pb-3 thumbnail-grid">
+  </div>
+</div>
+{{end}}
 {{end}}
 
 {{define "footer-scripts"}}
 <!-- Youtube slider script -->
 <script>
-var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
-var youtubeSessionsPlaylistID = "{{.PageContext.Youtube.SessionsPlaylistID}}";
-var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
+var youtubeAPIKey = "{{.PageContext.Youtube.APIKey}}";
+var youtubeOD1PlaylistID = "{{.PageContext.Youtube.OD1PlaylistID}}";
+var youtubeOD2PlaylistID = "{{.PageContext.Youtube.OD2PlaylistID}}";
 var youtubeLink = "{{.PageContext.Youtube.ChannelURL}}";
 var isIndex = false;
 var isCIN = false;
