Fix incorrect scope

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -71,7 +71,7 @@
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
           <div class="ury-card-img"
             style="background: url('
-            {{if .Podcast.Photo}}
+            {{if .Photo}}
               {{$.PageContext.FullURL}}{{.Photo}}
              {{else}}
               {{url "/images/default_show_profile.png"}}
