--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -76,7 +76,8 @@
              {{else}}
               {{url "/images/default_show_profile.png"}}
             {{end}}
-            ');" title="URY Podcast: {{.Title}} Logo"></div>
+            ');" title="URY Podcast: {{.Title}} Logo">
+          </div>
           <div class="ury-card-body">
             <div class="ury-card-title">{{.Title}}</div>
             <span>{{.Time.Format "Monday, _2 Jan 2006"}}</span>
