--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -71,11 +71,11 @@
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
           <div class="ury-card-img"
             style="background: url('
-            {{if .Photo}}
+            {{- if .Photo -}}
               {{$.PageContext.FullURL}}{{.Photo}}
-             {{else}}
+            {{- else -}}
               {{url "/images/default_show_profile.png"}}
-            {{end}}
+            {{- end -}}
             ');" title="URY Podcast: {{.Title}} Logo">
           </div>
           <div class="ury-card-body">
