--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -61,12 +61,12 @@
         <a class="ury-card podcast" href="{{.MicrositeLink.URL}}">
           <div class="ury-card-img"
             style="background: url('
-            {{if .Photo}}
+            {{- if .Photo -}}
               {{$.PageContext.FullURL}}{{.Photo}}
-            {{else}}
+            {{- else -}}
               {{url "/images/default_show_profile.png"}}
-            {{end}}');"
-            title="URY Podcast: {{.Title}} Logo">
+            {{- end -}}
+            ');" title="URY Podcast: {{.Title}} Logo">
           </div>
           <div class="ury-card-body">
             <div class="ury-card-title">{{.Title}}</div>
