--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -112,6 +112,16 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-6">
+        <h2>2020</h2>
+        <ul>
+          <li>Gold Best Student Radio Station 2020</li>
+          <li>Gold Best Student Chart Show (<a href="{{url "/schedule/shows/timeslots/147688/"}}">URY's Entry</a>)</li>
+          <li>Gold Best Technical Achievement (WebStudio Remote Broadcasting)</li>
+          <li>Silver Best Music Presenters (<a href="{{"/people/10331/"}}">Alex West</a> and <a href="{{"/people/8796/"}}">Numi Gildert</a>)
+          <li>Silver Best Technical Achievement (Dearie-Me and Silencio Dead Air Detection)</li>
+          <li>Silver Best Newcomer (<a href="{{url "/people/11090"}}">Marks Polakovs</a>)</li>
+          <li>Bronze Best Journalistic Programming (<a href="{{url "/schedule/shows/timeslots/146664/"}}">Candidate Interview Night</a>)</li>
+        </ul>
         <h2>2019</h2>
         <ul>
           <li>Gold Best Student Chart Show (<a href="{{url "/schedule/shows/timeslots/146075/"}}">URY's Entry</a>)</li>
@@ -152,6 +162,8 @@
         <ul>
           <li>Silver Best Journalistic Programming (<a href="{{url "/schedule/shows/12896/"}}">URY: River Safety: York’s Rising Problem</a>)</li>
         </ul>
+      </div>
+      <div class="col-md-6 col-lg-6">
         <h2>2013</h2>
         <ul>
           <li>Gold Best Speech Programming (<a href="{{url "/schedule/shows/12602/"}}">URY: The New World Order: Part 2: 1651</a>)</li>
@@ -160,8 +172,6 @@
           <li>Bronze Best Entertainment Show (<a href="{{url "/schedule/shows/12629/"}}">The Harry Whittaker Show</a>)</li>
           <li>Bronze Kevin Greening Award for Creativity (<a href="{{url "/podcasts/816/"}}">URY: Trimble</a>)</li>
         </ul>
-      </div>
-      <div class="col-md-6 col-lg-6">
         <h2>2012</h2>
         <ul>
           <li>Silver Best Station</li>
