ummm....HOW DID WE GET BEST STATION!?!?!?!?!?!??!?

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -22,6 +22,9 @@
       </div>
     </div>
   </div>
+  <div id="index-infobar" class="container-fluid bg-off-white container-padded text-center">
+  <h1>SRA Best Student Radio Station 2020</h1>
+  </div>
   <div id="index-infobar" class="container-fluid bg-off-white container-padded">
     <div class="container">
       <div class="row justify-content-center">
