--- a/sass/elements/_faq.scss
+++ b/sass/elements/_faq.scss
@@ -18,7 +18,7 @@
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 
-.active,
+.faq-question.active,
 .faq-question:hover {
     background-color: #ccc;
 }
@@ -39,9 +39,10 @@
     font-size: 1em;
     float: right;
     margin-left: 5px;
+
+    &:after {
+        content: "\2796";
+        /* Unicode character for "minus" sign (-) */
+    }
 }
 
-.active:after {
-    content: "\2796";
-    /* Unicode character for "minus" sign (-) */
-}
