Add SRA 2020 bug

--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -12,6 +12,14 @@
     // Remove the height of the nav bar roughly 60px
     padding: calc(8em + 60px) 0 8em;
   }
+
+  .sra-2020-bug {
+    position: absolute;
+    top: calc(1em + 60px);
+    left: 1em;
+    max-width: 90vw;
+    max-height: 54px;
+  }
 }
 .current-next-container {
   max-width: 950px;
