--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -3,6 +3,7 @@
     {{template "istorn2020_countdown" .}}
   {{end}}
   <div class="container-fluid header-large current-next position-relative">
+  <img src="/images/sra-2020-bug.png" class="sra-2020-bug" alt="" />
   {{if .PageContext.Christmas}}
     <div class="snow"></div>
   {{end}}
