podcast show more properly

--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -190,7 +190,7 @@
 {{end}}
 {{with .PageData}}
 {{if gt (len .Podcasts) 0}}
-  <div class="container-fluid bg-podcasts">
+  <div class="container-fluid bg-off-white">
     <div class="container pt-3 pb-1">
       <div class="row justify-content-between">
         <div class="col">
