--- a/views/on_demand.tmpl
+++ b/views/on_demand.tmpl
@@ -28,14 +28,14 @@
   <div class="row custom-scrollbar scroll-horiz scroll-none-xl thumbnail-slider">
     {{range .PageData.LatestTimeslots}}
     <div class="col-8 col-sm-7 col-md-4 col-lg-3 col-xl-2 p-3 thumbnail-container">
-      <a class="ury-card " href="/schedule/shows/timeslots/{{.TimeslotID}}/">
+      <a class="ury-card " href="/schedule/shows/timeslots/{{.TimeslotID}}/" title="URY Podcast: {{.Title}}">
         <div class="ury-card-img" style="background: url('
             {{- if .Season.ShowMeta.Photo -}}
               {{$.PageContext.FullURL}}{{.Season.ShowMeta.Photo}}
             {{- else -}}
               {{url "/images/default_show_profile.png"}}
             {{- end -}}');
-          " title="{{.Title}} Logo"></div>
+          " alt="{{.Title}} Logo"></div>
         <div class="ury-card-body">
           <div class="ury-card-title">{{.Title}}</div>
           <span class="ury-card-date">{{.StartTime.Format "15:04 - Mon"}} • {{formatDuration .Duration}}</span>
