--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -15,9 +15,9 @@ $primetime: #feb93a;
 
 $collab: #d14fda;
 
-$cin-primary: #00A69C;
-$cin-dark-primary: #1C857C;
-$cin-background: #333333;
+$cin-primary: #FFF;
+$cin-dark-primary: #7DE551;
+$cin-background: #091121;
 
 $disabled-color: rgb(150, 150, 150);
 $primary-color: $ury-blue-color;
