--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -1,7 +1,8 @@
 {{define "title"}}{{.PageContext.ShortName}} | CIN{{end}}
 
 {{define "content"}}
-<div class="container-fluid bg-cin bg-cin-gif">
+<div class="container-fluid bg-cin-2">
+<div class="container bg-cin bg-cin-space">
     <div class="container container-padded">
       <div class="row align-items-center text-center">
         <div class="col">
@@ -45,10 +46,12 @@
     </div>
     {{end}}
 </div>
-<div id="interactive" class="container">
+
+<div id="interactive" class="container bg-cin">
 
 </div>
-<div id="index-videos" class="container-fluid container-padded bg-cin">
+</div>
+<div id="index-videos" class="container-fluid container-padded bg-cin bg-cin-space">
     <div id="cin-videos" class="row pb-3 youtube-grid">
     </div>
 </div>
