Small Styling Tweaks

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -99,6 +99,10 @@ $breakpoints: sm, md, lg, xl;
   color: $cin-primary;
 }
 
+.cin-text-2 {
+  color: $cin-dark-primary;
+}
+
 .istorn2020-countdown {
   height: 100vh !important;
   background-color: transparent;
