--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}{{.PageContext.ShortName}} | CIN{{end}}
+{{define "title"}}{{.PageContext.ShortName}} | Candidate Interview Night{{end}}
 
 {{define "content"}}
 <div class="container-fluid bg-cin-2">
@@ -38,6 +38,8 @@
           <td class="cin-count">SECONDS</td>
         </tr>
       </table>
+      <br>  
+      <h2 class="cin-text-2">The broadcast will start at 7pm on Tuesday 2nd March.</h2>
     </div>
     {{end}}
     {{if .PageContext.CINLivestreaming}}
