--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -1,10 +1,11 @@
 {{define "title"}}{{.PageContext.ShortName}} | Candidate Interview Night{{end}}
 
 {{define "content"}}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="container-fluid bg-cin-2">
 <div class="container bg-cin bg-cin-space">
     <div class="container container-padded">
-      <div class="row align-items-center text-center">
+      <div class="row align-items-center text-center" id="liveStream">
         <div class="col">
           <h1 class="display-3 cin-text">{{.PageContext.ShortName}} Candidate Interview Night</h1>
         </div>
