CIN Page Styling

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -45,7 +45,7 @@
     {{end}}
     {{if .PageContext.CINLivestreaming}}
     <div class="container-fluid container-padded align-items-center text-center">
-      <iframe src="{{.PageContext.CINLive}}" width="800" height="450" style="border:none;overflow:hidden;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+      <iframe src="{{.PageContext.CINLive}}" width="800" height="450" style="border:none;overflow:hidden;max-width: 90%;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
     </div>
     {{end}}
 
