--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -95,12 +95,30 @@ $breakpoints: sm, md, lg, xl;
   overflow: hidden;
 }
 
+// CIN Stuff
+
 .cin-text {
   color: $cin-primary;
 }
 
 .cin-text-2 {
   color: $cin-dark-primary;
+}
+
+.youtubePlay:link {
+  text-decoration: none;
+}
+
+.youtubePlay:visited {
+  text-decoration: none;
+}
+
+.youtubePlay:hover {
+  text-decoration: none;
+}
+
+.youtubePlay:active {
+  text-decoration: none;
 }
 
 .istorn2020-countdown {
