--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -72,6 +72,7 @@ var youtubeCINPlaylistID = "{{.PageContext.Youtube.CINPlaylistID}}";
 var youtubeLink = "{{.PageContext.Youtube.ChannelURL}}";
 var isIndex = false;
 var isCIN = true;
+var cinAPI = {{.PageContext.CINAPI}};
 var isCINlive = {{.PageContext.CINLivestreaming}};
 var isOD = false;
 var isCountdown = true;
