--- a/views/search.tmpl
+++ b/views/search.tmpl
@@ -14,8 +14,6 @@
                 <label for="sourceShows">Shows</label>
                 <input type="radio" id="sourcePodcasts" name="source" value="podcast" {{if eq .Source "podcast"}}checked{{end}}>
                 <label for="sourcePodcasts">Podcasts</label>
-                <input type="radio" id="sourcePeople" name="source" value="people" {{if eq .Source "people"}}checked{{end}}>
-                <label for="sourcePeople">People</label>
             </div>
         </div>
     </form>
@@ -25,25 +23,24 @@
 	{{if .Searching}}
         <div class="pt-3" style="text-align: right;">{{.NumResults}} Results</div>
         <hr>
-        {{range .ShowResults}}
-            <h5>
-                <a href="/schedule/shows/{{.ShowID}}/">{{.Title}}</a>
-            </h5>
-            {{html .Description}}
-            <hr>
-        {{end}}
-		{{range .PodcastResults}}
-            <h5>
-				<a href="/podcasts/{{.PodcastID}}/">{{.Title}}</a>
-            </h5>
-		    {{html .Description}}
-            <hr>
-        {{end}}
-        {{range .PeopleResults}}
-            <h5>
-                <a href="/people/{{.MemberID}}/">{{.Fname}} {{.Sname}}</a>
-            </h5>
-            <hr>
+        {{if .ShowResults }}
+            <h1> Shows</h1>
+            {{range .ShowResults}}
+                <h5>
+                    <a href="/schedule/shows/{{.ShowID}}/">{{.Title}}</a>
+                </h5>
+                {{html .Description}}
+                <hr>
+            {{end}}
+        {{else if .PodcastResults}}
+            <h1> Podcasts</h1>
+            {{range .PodcastResults}}
+                <h5>
+                    <a href="/podcasts/{{.PodcastID}}/">{{.Title}}</a>
+                </h5>
+                {{html .Description}}
+                <hr>
+            {{end}}
         {{end}}
         {{if eq .NumResults 0}}
             <h4 class="text-center m-5">
