--- a/sass/base/_searchBox.scss
+++ b/sass/base/_searchBox.scss
@@ -14,7 +14,6 @@ $search-background: rgb(255, 255, 255);
   width: auto;
 
 
-
   input {
     background: none;
     border: 0;
@@ -38,8 +37,8 @@ $search-background: rgb(255, 255, 255);
   }
   .source-group {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: -4px;
+    right: 1px;
     background: $off-white-color;
     border-radius: 45px;
     padding: 0 15px;
@@ -47,6 +46,7 @@ $search-background: rgb(255, 255, 255);
       display: inline-block;
       padding: 0 5px;
       font-size: 0.8em;
+      vertical-align: text-top;
     }
     input:checked + label {
       color: $blue;
