--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -11,7 +11,7 @@
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
-  <p id="charcount"></p>
+  <p id="charcount" class="my-1"></p>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
   {{if not .ShowOnAir}}
   	disabled
