--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -7,15 +7,15 @@
   {{if .MsgBoxError}}
   	"Message cannot be sent at this time, please try again later."
   {{else if not .ShowOnAir}}
-  	"No shows are on air right now, so there's no-one to send a message to." disabled 
+  	"No shows are on air right now, so there's no-one to send a message to." disabled
   {{else}}
   	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
   {{end}}></textarea>
-  <p id="charcount" class="my-1"></p>
+  <p id="charcount" class="text-muted my-1"></p>
   <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE"
   {{if not .ShowOnAir}}
   	disabled
-  {{end}} 
+  {{end}}
   >Send Message</button>
 </form>
 <p class="pt-1 mb-0">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
