--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -25,7 +25,7 @@
     {{else}}
     </div>
     {{end}}
-    <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn listen-btn-animated mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
+    <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn listen-btn-animated mobile-hide" title="Listen Live" onclick="window.open('//ury.org.uk/live', 'radioplayer', 'height=800,width=440'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
   </div>
   {{end}}
   {{if .Next}}
@@ -45,7 +45,7 @@
   </div>
   {{end}}
   <div class="col-12 mobile-only p-0">
-    <a aria-hidden="true" href="https://ury.org.uk/listen" class="btn btn-lg btn-block btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
+    <a aria-hidden="true" href="https://ury.org.uk/listen" class="btn btn-lg btn-block btn-square btn-red listen-btn-mobile" title="Listen Live" onclick="window.open('//ury.org.uk/live', 'radioplayer'); return false;"><i class="fa fa-volume-up mr-2"></i>Listen Live</a>
   </div>
 </div>
 {{end}}
