footer stays at the bottom of the page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -386,3 +386,14 @@ footer {
     height: auto;
   }
 }
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.mainPageGrowingSpacer{
+  flex-grow: 1;
+  background-color: $off-white-color;
+}
