--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -52,6 +52,7 @@
 
 
 {{block "footer-block" .}}
+    <div class="mainPageGrowingSpacer"></div>
     {{template "footer" .}}
 {{end}}
 <script>var MyRadioAPIKey = {{.PageContext.MyRadioAPIKey }};</script>
