--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -3,9 +3,7 @@
 <h2>Send a Message</h2>
 <hr>
 <textarea class="form-control" id="comments" name="message" rows="4" maxlength="1000" placeholder=
-{{if .MsgBoxError}}
- 	"Message cannot be sent at this time, please try again later."
-{{else if not .ShowOnAir}}
+{{if not .ShowOnAir}}
  	"No shows are on air right now, so there's no-one to send a message to." disabled
 {{else}}
 	"Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"
