--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -127,7 +127,7 @@
         <h2>2019</h2>
         <ul>
           <li>Gold Best Student Chart Show (<a href="{{url "/schedule/shows/timeslots/146075/"}}">URY's Entry</a>)</li>
-          <li>Gold Best Newcomer (<a href="{{url "/people/10756"}}">Joseph Morrall</a>)</li>
+          <li>Gold Best Newcomer (<a href="{{url "/people/10756"}}">Kathy Morrall</a>)</li>
           <li>Gold Best Female (<a href="{{url "/people/10058"}}">Hannah Sackville-Bryant</a>)</li>
           <li>Silver Best Technical (Building Homebrew Studio Infrastructure)</li>
           <li>Silver Best Entertainment Show (<a href="{{url "/people/9979/"}}">Joel Mitchell</a>)</li>
