--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -63,8 +63,8 @@
           <p>We are of course a legal radio station and we broadcast on AM radio all across campus on 1350KHz Medium Wave.</p>
           <p>So what are you waiting for? Ask your parents if you can have their old boom box, and get it tuned into URY like it’s 1989.</p>
           <h3>FM Radio</h3>
-          <p>We're also braodcasting across campus on 88.3MHz FM.</p>
-          <p>Did your parents get rid of the boom box at a car boot sale? Pick us up on that radio you got yourself because your at uni and you're an "adult" now.</p>
+          <p>We're also broadcasting across campus on 88.3MHz FM.</p>
+          <p>Did your parents get rid of the boom box at a car boot sale? Pick us up on that radio you got yourself because you're at uni and you're an "adult" now.</p>
           <h3>In Your Ears</h3>
           <p>URY can occasionally be heard out and about on campus, we regularly attend campus events such as move-in days, Freshers’ Fairs, and Elections Result Night! If you hear us… come along and say hi!</p>
       </div>
