Make the homepage countdown more generic
Last year we made a one-off full screen countdown for the home page. This makes it a generic, configurable thing that doesn't require a PR to change the date each time.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -121,7 +121,7 @@ $breakpoints: sm, md, lg, xl;
   text-decoration: none;
 }
 
-.istorn2020-countdown {
+.index-countdown-wrapper {
   height: 100vh !important;
   background-color: transparent;
   display: flex;
@@ -139,7 +139,7 @@ $breakpoints: sm, md, lg, xl;
   }
 }
 
-.istorn-countdown {
+.index-countdown {
   display: inline-block;
   //background-color: white;
   font-family: "Raleway", sans-serif;
@@ -154,7 +154,7 @@ $breakpoints: sm, md, lg, xl;
   }
 }
 
-#istorn020_bg {
+#index-countdown-video {
   position: fixed;
   bottom: 0;
   right: 0;
