--- a/sass/elements/_index.scss
+++ b/sass/elements/_index.scss
@@ -15,10 +15,11 @@
 }
 
 .index-countdown-video-wrapper {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
   overflow: hidden;
   #index-countdown-video {
