Make lists of odd teams centered.

--- a/views/teams.tmpl
+++ b/views/teams.tmpl
@@ -26,7 +26,7 @@
   <div class="container-fluid bg-off-white">
     <div class="container container-padded">
       <h1>Teams</h1>
-      <div class="row">
+      <div class="row justify-content-center">
         {{range .Teams}}
           {{if .Alias}}
           <div class="col-12 col-sm-6 col-lg-6 my-3 team-card">
