--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -103,6 +103,7 @@
       <p>We pride ourselves at URY for running all the technical aspects of the radio station ourselves. In summer 2015, the internal audio routing was completely overhauled and converted to audio over IP by the engineering team in a project known as “Beat the Buzz”.</p>
       <p>In 2018 we were awarded a grant by the University of York of £40,000 to upgrade our studios and upgrade them we did. Brand new audio equipment, a total interior re-design, and fancy red/blue colour schemes to match, the 40K project, completed Christmas 2019 and fronted by some of URY's most dedicated members, allowed us to produce highly polished material while also giving the broader community in the University a place to create their own audio content.</p>
       <p>Over the decades we've enjoyed ourselves doing all manner of ridiculous things on and off-air. We pride ourselves on our innovative approach to radio that you will struggle to find in the industry. Luckily these ideas are recognised by industry professionals by a plethora of awards. In 2020, nearly 15 years since our last win for gold in the category - we won the gold award for Best Student Radio Station in the country at the Student Radio Awards. The judges praised the attention we gave to our audience and the novel ideas we pushed to the forefront of our content.</p>
+      <p>In 2021, we were given a license to broadcast on FM at the same time as AM, getting us onto both 1350AM and 88.3FM.</p>
     </div>
   </div>
 </div>
