--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -118,6 +118,15 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-lg-6">
+        <h2>2021</h2>
+        <ul>
+          <li>Gold Best Sports Programming (<a href="{{url "/schedule/shows/14074/"}}">Roses Unlocked</a>)</li>
+          <li>Gold Best Student Chart Show (<a href="{{url "/schedule/shows/timeslots/148249"}}">URY's Entry</a>)</li>
+          <li>Bronze Best Student Radio Station</li>
+          <li>Bronze Best Station Branding</li>
+          <li>Bronze Best Technical Achievement (<a href="{{url "/schedule/shows/timeslots/148511/"}}">Candidate Interview Night</a>)</li>
+          <li>Bronze Best Multiplatform Initiative (<a href="{{url "/schedule/shows/timeslots/148511/"}}">Candidate Interview Night</a>)</li>
+        </ul>
         <h2>2020</h2>
         <ul>
           <li>Gold Best Student Radio Station 2020</li>
@@ -164,12 +173,12 @@
           <li>Silver Best Technical Achievement (URY: Roses Mini OB Kits)</li>
           <li>Bronze Best Male Presenter (<a href="{{url "/people/8027/"}}">Harry Whittaker</a>)</li>
         </ul>
+        </div>
+        <div class="col-md-6 col-lg-6">
         <h2>2014</h2>
         <ul>
           <li>Silver Best Journalistic Programming (<a href="{{url "/schedule/shows/12896/"}}">URY: River Safety: York’s Rising Problem</a>)</li>
         </ul>
-      </div>
-      <div class="col-md-6 col-lg-6">
         <h2>2013</h2>
         <ul>
           <li>Gold Best Speech Programming (<a href="{{url "/schedule/shows/12602/"}}">URY: The New World Order: Part 2: 1651</a>)</li>
