add message for stream

--- a/views/cin.tmpl
+++ b/views/cin.tmpl
@@ -46,6 +46,7 @@
     {{if .PageContext.CINLivestreaming}}
     <div class="container-fluid container-padded align-items-center text-center">
       <iframe src="{{.PageContext.CINLive}}" width="800" height="450" style="border:none;overflow:hidden;max-width: 90%;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+      <p>Due to technical issues on the night, this video is not the entire evenings events. You can view it on our YouTube, or select the individual interviews below.</p>
     </div>
     {{end}}
 
